# app/Http/Controllers/Controller.php
@@ -2,7 +2,33 @@
 
 namespace App\Http\Controllers;
 
-abstract class Controller
+use Illuminate\Foundation\Auth\Access\AuthorizesRequests;
+use Illuminate\Foundation\Validation\ValidatesRequests;
+use Illuminate\Routing\Controller as BaseController;
+
+/**
+ * @OA\Info(
+ *     version="1.0.0",
+ *     title="Panel API Documentation",
+ *     description="API documentation for Payment Panel",
+ *     @OA\Contact(
+ *         email="support@telemedia.pl"
+ *     )
+ * )
+ * 
+ * @OA\Server(
+ *     url="/api",
+ *     description="API Server"
+ * )
+ * 
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     securityScheme="bearerAuth"
+ * )
+ */
+class Controller extends BaseController
 {
-    //
+    use AuthorizesRequests, ValidatesRequests;
 }
