# routes/api.php
@@ -1,7 +1,10 @@
 <?php
 
-Route::middleware('auth.basic')->group(function () {
-    Route::apiResource('users', UserController::class)->only(['index', 'store']);
-    Route::apiResource('payments', PaymentController::class)->only(['index', 'store']);
-    Route::apiResource('invoices', InvoiceController::class)->only(['index', 'store']);
+Route::middleware('auth:sanctum')->group(function () {
+    Route::apiResource('helpdesk', HelpdeskController::class);
+    Route::post('helpdesk/{subject}/reply', [HelpdeskController::class, 'reply']);
+    
+    Route::apiResource('payments', PaymentController::class);
+    Route::apiResource('invoices', InvoiceController::class);
+    Route::apiResource('users', UserController::class);
 });
